addons/manifests/tanzu-addons-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tanzu-addons-manager
  name: tanzu-addons-controller-manager
  namespace: tkg-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tanzu-addons-manager
  template:
    metadata:
      labels:
        app: tanzu-addons-manager
    spec:
      containers:
      - args:
        - --metrics-bind-addr=0
        - --leader-elect=false
        image: projects-stg.registry.vmware.com/tkg/addons/manager/addons-controller:v0.0.1_vmware.1
        imagePullPolicy: IfNotPresent
        name: manager
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
      serviceAccount: tanzu-addons-manager-sa
      terminationGracePeriodSeconds: 10
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
